fix: add gap to cards list in mobile view

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,5 +1,5 @@
 .cards>ul {
-  @apply list-none m-0 p-0 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-6;
+  @apply list-none m-0 p-0 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6;
 }
 
 .cards .card-title{
